2012-04-13  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/grub-setup.c (setup): Fix partition handling and blocklist
	check.

2012-04-13  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/lib/relocator.c (grub_relocator_alloc_chunk_align): Remove
	redundant buggy overlap check.

2012-04-11  Vladimir Serbinenko  <phcoder@gmail.com>

	* tests/util/grub-shell.in: Set pkgdatadir when calling grub-mkrescue
	and grub-mknetdir.

2012-04-11  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/loader/i386/linux.c (grub_cmd_linux): Avoid accessing
	kh.loadflags on pre-2.00 kernels.

2012-04-11  Vladimir Serbinenko  <phcoder@gmail.com>

	Terminate UNDI and PXE before launching the payload to avoid problems
	with DMA.

	* grub-core/commands/boot.c (grub_loader_noreturn): Rename to ...
	(grub_loader_flags): ... this. All users updated.
	(grub_loader_boot): Check for GRUB_LOADER_FLAG_NORETURN.
	* grub-core/loader/i386/pc/pxechainloader.c (grub_cmd_pxechain): Mark
	loader as GRUB_LOADER_FLAG_PXE_NOT_UNLOAD.
	* grub-core/net/drivers/i386/pc/pxe.c (grub_pxe_shutdown): New
	function.
	(grub_pxe_restore): Likewise.
	(fini_hnd): New var.
	(GRUB_MOD_INIT): Register shutdown hook.
	(GRUB_MOD_FINI): Shutdown and unregister shutdown hook.
	* include/grub/loader.h (GRUB_LOADER_FLAG_NORETURN): New const.
	(GRUB_LOADER_FLAG_PXE_NOT_UNLOAD): Likewise.
	(grub_loader_set): Rename second argument to flags.

2012-04-07  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/normal/charset.c (grub_ucs4_to_utf8): Return number of
	written bytes.
	(grub_get_num_of_utf8_bytes): New function.
	(grub_ucs4_to_utf8_alloc): Use grub_get_num_of_utf8_bytes.
	* grub-core/normal/menu_entry.c (run): Convert entry to UTF-8 before
	executing it.
	* include/grub/charset.h (grub_get_num_of_utf8_bytes): New proto.
	(grub_ucs4_to_utf8): Change return type.

2012-04-07  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/commands/usbtest.c (usb_print_str): Silence spurious
	warning.